# CraftingCalculatorCPP

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  craftingCalculator  craftingCalculator.cbp
inc/: Component.h  CraftingCalculator.h  IIngredient.h  Ingredient.h  IngredientList.h  NbtData.h  OreDictEntry.h  OreDictIngredient.h  Recipe.h  RecipeBook.h
src/: Component.cpp  IIngredient.cpp  Ingredient.cpp  IngredientList.cpp  NbtData.cpp  OreDictEntry.cpp  OreDictIngredient.cpp  Recipe.cpp  RecipeBook.cpp  main.cpp
testing/: netherStarTest.py
